[Polyam] Fix icon crushed when account name was too long
Port 6027764c3156ff4000bbbc812fa93873b4b65fd6 to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/notification.scss
+++ b/app/javascript/flavours/polyam/styles/components/notification.scss
@@ -537,6 +537,10 @@
       bdi {
         color: $darker-text-color;
       }
+
+      .account__avatar {
+        flex: 0 0 auto;
+      }
     }
 
     /* glitch: used for CWs */
